--- a/djcrud/fapp/templates/fapp/login.html
+++ b/djcrud/fapp/templates/fapp/login.html
@@ -1,7 +1,8 @@
 <h3>Login</h3>
 
+ <p>Hi Login to welcome</p>
 <form method="POST">
     {% csrf_token %}
-    {{from.as_p}}
+    {{form.as_p}}
     <input type="submit" value="Login" />
 </form>
