--- a/djcrud/fapp/templates/fapp/task_forme.html
+++ b/djcrud/fapp/templates/fapp/task_forme.html
@@ -2,7 +2,7 @@
 
 <a href="{% url 'tasks' %}">Go Back</a>
 
-<form method="POST" action="">
+<form method="POST">
     {% csrf_token %}
     {{form.as_p}}
     <input type="submit" value="Submit">
