--- a/djcrud/fapp/templates/fapp/task_list.html
+++ b/djcrud/fapp/templates/fapp/task_list.html
@@ -16,13 +16,13 @@
 
 
     <section>
-        {% if request.user.is_authenticated %}
-        <p>{{request.user}}</p>
-        <a href="{% url 'login' %}">Logout</a>
-        {% else %}
-        <a href="">Login</a>
-        {% endif %}
 
+        {% if request.user.is_authenticated %}
+            <p>{{request.user}}</p>
+            <a href=" {% url 'logout' %} ">Logout</a>
+        {% else %}
+            <a href="{% url 'login' %}">Login</a>
+        {% endif %}
 
         <h1>To Do In by the time</h1>
         <a href="{% url 'task-create' %}">Add New task</a>
@@ -32,14 +32,15 @@
                 <th>Item</th>
             </tr>
             {% for task in tasks %}
-            <tr>
-                <td>{{task.title}}</td>
-                <td><a href="{% url 'task' task.id %}">Show</a></td>
-                <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
-                <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
-            </tr>
-            {% empty %}
-                <h3>No items on list</h3>
+                <tr>
+                    <td>{{task.title}}</td>
+                    <td><a href="{% url 'task' task.id %}">Show</a></td>
+                    <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
+                    <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
+                    <td>{{task.create}}</td>
+                </tr>
+                {% empty %}
+                    <h3>No items on list</h3>
             {% endfor %}
         </table>
 
